[gd_scene load_steps=4 format=3 uid="uid://8op6hl0tha0x"]

[ext_resource type="Script" path="res://scenes/ui/inventory/inventory_slot.gd" id="1_caqln"]
[ext_resource type="Texture2D" uid="uid://5ht6wcth56nk" path="res://assets/sprites/ui/inventory/inventory_slot.png" id="2_fojku"]
[ext_resource type="Script" path="res://classes/inventory/item_icon.gd" id="3_f54u7"]

[node name="InventorySlot" type="TextureRect"]
texture = ExtResource("2_fojku")
script = ExtResource("1_caqln")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 34.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 3
script = ExtResource("3_f54u7")

[node name="Timer" type="Timer" parent="ItemIcon"]
unique_name_in_owner = true
one_shot = true

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="ItemIcon" to="ItemIcon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemIcon" to="ItemIcon" method="_on_mouse_exited"]
[connection signal="timeout" from="ItemIcon/Timer" to="ItemIcon" method="_on_timer_timeout"]
